--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 #Datasource
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/ibank?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+#spring.jpa.properties.hibernate.hbm2ddl.auto=create
 
 spring.liquibase.change-log=classpath:/database/liquibase-changelog.xml
+
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
