--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Datasource
 #spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/ibank?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/ibank?createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
@@ -11,3 +11,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.liquibase.change-log=classpath:/database/liquibase-changelog.xml
 
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+####################
+# EMAIL CONFIGURATION
+######################
+email.util.host=smtp.gmail.com
+email.util.port=587
+email.util.user=mary.kim0824@gmail.com
+email.util.pass=rfvbgt6yhn
