--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.jpa.properties.hibernate.id.new_generator_mappings=false
 ######################
 email.util.host=smtp.gmail.com
 email.util.port=587
-email.util.user=ahhhlexqwert@gmail.com
-email.util.pass=QWErty12345
+email.util.user=mary.kim0824@gmail.com
+email.util.pass=rfvbgt6yhn
