--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Datasource
 #spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/ibank?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=testuser
-spring.datasource.password=testpass
+spring.datasource.username=root
+spring.datasource.password=root
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
@@ -11,7 +11,3 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.liquibase.change-log=classpath:/database/liquibase-changelog.xml
 
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
-
-# Application context
-server.servlet.context-path=/ibank
-server.port=8090
