--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
-			<!--<version>3.6.2</version>-->
+			<version>3.6.2</version>
 		</dependency>
 	</dependencies>
 
@@ -74,7 +74,7 @@
 			<plugin>
 				<groupId>org.liquibase</groupId>
 				<artifactId>liquibase-maven-plugin</artifactId>
-				<!--<version>3.6.2</version>-->
+				<version>3.6.2</version>
 				<configuration>
 					<propertyFile>src/main/resources/database/liquibase.properties</propertyFile>
 				</configuration>
