--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.datasource.password=root
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.jpa.show-sql=true
 
 spring.liquibase.change-log=classpath:/database/liquibase-changelog.xml
 
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
